--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,30 +1,33 @@
-pipeline {
-    agent {
-        docker {
-            image 'maven:3-alpine'
-            args '-v /root/.m2:/root/.m2'
-        }
-    }
+pipeline{
+    agent any
     stages {
-        stage('Build') {
-            steps {
-                sh 'mvn -B -DskipTests clean package'
-            }
-        }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
+        stage ('Compile stage') {
+
+            steps{
+                withMaven(maven: 'jenkins-maven') {
+                    sh 'mvn clean compile'
                 }
-            }
+            }   
         }
-        stage('Deliver') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
-            }
+
+        stage ('Testing stage') {
+
+            steps{
+                withMaven(maven: 'jenkins-maven') {
+                    sh 'mvn test'
+                }
+            }   
+
+        }
+
+        stage ('Deploy stage') {
+
+            steps{
+                withMaven(maven: 'jenkins-maven') {
+                    sh 'mvn deploy'
+                }
+            }   
+
         }
     }
 }
